Monday Lecture and Demo

--- a/friendsapp/app/views/layouts/application.html.erb
+++ b/friendsapp/app/views/layouts/application.html.erb
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>PizzaProj</title>
+  <title>FriendsApp</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<h1>Welcome to Our pizza Shop</h1>
-<%= yield %>
 
-<h1>Please Shop with us again</h1>
+<%= yield %>
 
 </body>
 </html>
